tdf#141689 Fix crash in 'Central' moving avg function

Change-Id: I2dc5e517d5e3ff6283c9ff66c9f32ee95d66ef45
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/114121
Tested-by: Jenkins
Reviewed-by: Heiko Tietze <heiko.tietze@documentfoundation.org>